--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
+
+<html lang="en">
+<head>
 <meta charset="UTF-8">
-<html>
+<title>Assignment #1</title>
+</head>
+
 <body>
 <!--Testing version control, 2nd attempt --> 
 <canvas id="myCanvas" width="1200" height="70" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 
 <script>
-
 var c=document.getElementById("myCanvas");
 var ctx=c.getContext("2d");
 ctx.font="30px Arial";
 ctx.fillText("Hello World",10,50);
-
 </script>
 
 <body style="background-color:azure">
-<title>Assignment #1</title>
+
 <h1 style="background-color:beige">Name: Furrukh Baber</h1>
 <p style="background-color:blanchedalmond">Background: Business Analyst</p>
 </body>
