Fixed validation errors #2

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ ctx.fillText("Hello World",10,50);
 
 <body style="background-color:azure">
 
-<h1 style="background-color:beige">Name: Furrukh Baber</h1>
-<p style="background-color:blanchedalmond">Background: Business Analyst</p>
+<h1 style="background-color:beige;">Name: Furrukh Baber</h1>
+<p style="background-color:blanchedalmond;">Background: Business Analyst</p>
 </body>
 
 </body>
