Fixing validation errors #3 and testing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<!--<meta charset="UTF-8"> -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Assignment #1</title>
 </head>
 
