--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ctx.font="30px Arial";
 ctx.fillText("Hello World",10,50);
 </script>
 
-<body style="background-color:azure">
+<body style="background-color:azure;">
 
 <h1 style="background-color:beige;">Name: Furrukh Baber</h1>
 <p style="background-color:blanchedalmond;">Background: Business Analyst</p>
