added CSS Styles

--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
-<!DOCTYPE html>
-
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-<!--<meta charset="UTF-8"> -->
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Assignment #1</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="main.css" type="text/css" />
+<title>CSCI E-15 Project 1</title>
+<link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<!--Testing version control, 2nd attempt --> 
-<canvas id="myCanvas" width="1200" height="70" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas>
-
-<script>
-var c=document.getElementById("myCanvas");
-var ctx=c.getContext("2d");
-ctx.font="30px Arial";
-ctx.fillText("Hello World",10,50);
-</script>
-</body>
-<body style="background-color:azure;">
-
-<h1 style="background-color:beige;">Name: Furrukh Baber</h1>
-<p style="background-color:blanchedalmond;">Background: Business Analyst</p>
-
-
+<h1>CSCI - E 15 Project 1 </h1>
+<table border="1"> <tr> <td width="201"><strong>Name</strong></td>
+     <td width="357"><strong>Background</strong></td>
+     <td width="492"><strong>Text Editor used </strong></td>
+     </tr> <tr> <td valign="top">Furrukh Baber</td>
+     <td valign="top">I work as an IT Business partner for a staffing firm in Long Island, New York. My area of expertise are in Oracle ERP (Enterprise resource planning tools) Technologies, specifically in HRMS. I  work with business on Transformation projects like HR system upgrade, business process engineering, system enhancements and upgrade to name a few. <br>
+      I live in New York City's Borough of Queens, in Fresh Meadows. In my free time I like to play tennis, golf, or just go to NYC and hang out with my friends.</td>
+     <td valign="top">I am using Notepad++ Editor to write my code. It is a free source code editor that supports several languages. Link to the Notepad++ editor is below.
+      <p>&nbsp;</p>
+      <a href="http://notepad-plus-plus.org/" target="_blank">Notepad++ Editor</a>
+      </td> </tr>
+</table>
 </body>
 </html>
+
+
