Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>CSCI - E 15 Project 1 </h1>
-<table border="1"> <tr> <td width="201"><strong>Name</strong></td>
+<table border="1"> <td width="201"><strong>Name</strong></td>
      <td width="357"><strong>Background</strong></td>
      <td width="492"><strong>Text Editor used </strong></td>
      </tr> <tr> <td valign="top">Furrukh Baber</td>
