--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!doctype html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="main.css" type="text/css" />
-<title>CSCI E-15 Project 1</title>
-<link href="main.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-<h1>CSCI - E 15 Project 1 </h1>
-<table border="1"> <td width="201"><strong>Name</strong></td>
-     <td width="357"><strong>Background</strong></td>
-     <td width="492"><strong>Text Editor used </strong></td>
-     </tr> <tr> <td valign="top">Furrukh Baber</td>
-     <td valign="top">I work as an IT Business partner for a staffing firm in Long Island, New York. My area of expertise are in Oracle ERP (Enterprise resource planning tools) Technologies, specifically in HRMS. I  work with business on Transformation projects like HR system upgrade, business process engineering, system enhancements and upgrade to name a few. <br>
-      I live in New York City's Borough of Queens, in Fresh Meadows. In my free time I like to play tennis, golf, or just go to NYC and hang out with my friends.</td>
-     <td valign="top">I am using Notepad++ Editor to write my code. It is a free source code editor that supports several languages. Link to the Notepad++ editor is below.
-      <p>&nbsp;</p>
-      <a href="http://notepad-plus-plus.org/" target="_blank">Notepad++ Editor</a>
-      </td> </tr>
-</table>
-</body>
+	<head>
+    <meta charset="utf-8">
+    <title>CSCI E-15 Project 1</title>
+   	<link href="main.css" rel="stylesheet" type="text/css">
+    </head>
+  
+	<body>
+     <div id="pageHeader">
+     	CSCI E-15 Project 1
+     </div>
+     <div id="wrapper">
+      <div class="leftColumn">
+        <h1>Furrukh Baber</h1>
+        <img src="FB2.jpg" width="200" height="175" alt="Photo of me" title="photo of me" class="photoOfMe">
+        
+        <hr class="clearLeft">
+      </div>
+      <div class="bodySection">
+          <h1>Little About Myself</h1>
+          <p>Hello, my name is Furrukh Baber.  I live in New York City's Borough of Queens, in Fresh Meadows. In my free time I like to play tennis, golf, or just go to NYC and hang out with my friends.</p>
+          <h1>Background</h1>
+          <p>I work as an IT Business partner for a staffing firm in Long Island, New York. My area of expertise are in Oracle ERP (Enterprise resource planning tools) Technologies, specifically in HRMS. I work with business on Transformation projects like HR system upgrade, business process engineering, system enhancements and upgrade to name a few. </p>
+          <h1>Code Editor</h1>
+          <p>I am using Notepad++ Editor to write my code. It is a free source code editor that supports several languages. Link to the Notepad++ editor is below.</p>
+          <p><a href="http://notepad-plus-plus.org/" target="_blank">Notepad++ Editor</a></p>
+      </div>
+     </div>
+  </body>
 </html>
-
-
